@@ -58,6 +58,7 @@ table {
   --border-width: var(--default-border-width);
   --border-color: var(--default-border-color);
   --text-decoration-thickness: auto;
+  --text-underline-offset: auto;
   --serif-font-family: Georgia, 'Times New Roman', serif;
   --sansserif-font-family: system-ui,
                              -apple-system,
@@ -430,6 +431,7 @@ hr {
 .ul, .ul\:hover:hover, .anchor:hover .ul\:hover {
   text-decoration: underline;
   text-decoration-thickness: var(--text-decoration-thickness);
+  text-underline-offset: var(--text-underline-offset);
 }
 
 .ol {
