@@ -5,6 +5,7 @@
   * (type) tabular-nums
   * (border) .border, .border-XY, drop .bX
   * (cursor) .cursor-inherit
+  * (type) --text-underline-offset
 
 # 0.17.0 (2020-06-07)
 
